cleaned tagged column '94, verified spaces '95

--- a/Data/Monarchs_1994_cleanup.ipynb
+++ b/Data/Monarchs_1994_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs\\\\Data'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -82,18 +82,18 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>index</td>\n",
-       "      <td>ix_monarchs1995_index</td>\n",
-       "      <td>monarchs1995</td>\n",
+       "      <td>ix_monarchs1994_index</td>\n",
+       "      <td>monarchs1994</td>\n",
        "      <td>3</td>\n",
-       "      <td>CREATE INDEX \"ix_monarchs1995_index\"ON \"monarc...</td>\n",
+       "      <td>CREATE INDEX \"ix_monarchs1994_index\"ON \"monarc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>table</td>\n",
-       "      <td>monarchs1995</td>\n",
-       "      <td>monarchs1995</td>\n",
+       "      <td>monarchs1994</td>\n",
+       "      <td>monarchs1994</td>\n",
        "      <td>2</td>\n",
-       "      <td>CREATE TABLE \"monarchs1995\" (\\n\"index\" INTEGER...</td>\n",
+       "      <td>CREATE TABLE \"monarchs1994\" (\\n\"index\" INTEGER...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -101,15 +101,15 @@
       ],
       "text/plain": [
        "    type                   name      tbl_name  rootpage  \\\n",
-       "0  index  ix_monarchs1995_index  monarchs1995         3   \n",
-       "1  table           monarchs1995  monarchs1995         2   \n",
+       "0  index  ix_monarchs1994_index  monarchs1994         3   \n",
+       "1  table           monarchs1994  monarchs1994         2   \n",
        "\n",
        "                                                 sql  \n",
-       "0  CREATE INDEX \"ix_monarchs1995_index\"ON \"monarc...  \n",
-       "1  CREATE TABLE \"monarchs1995\" (\\n\"index\" INTEGER...  "
+       "0  CREATE INDEX \"ix_monarchs1994_index\"ON \"monarc...  \n",
+       "1  CREATE TABLE \"monarchs1994\" (\\n\"index\" INTEGER...  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>Mon. Sex</td>\n",
+       "      <td>Mon Sex</td>\n",
        "      <td>TEXT</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
@@ -200,7 +200,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>Where Tagged</td>\n",
+       "      <td>Location</td>\n",
        "      <td>TEXT</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
@@ -227,7 +227,7 @@
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>7</td>\n",
-       "      <td>Where Recovered</td>\n",
+       "      <td>Location.1</td>\n",
        "      <td>TEXT</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
@@ -254,8 +254,8 @@
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>10</td>\n",
-       "      <td>Miles</td>\n",
-       "      <td>REAL</td>\n",
+       "      <td>Distance</td>\n",
+       "      <td>TEXT</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
        "      <td>0</td>\n",
@@ -265,21 +265,21 @@
        "</div>"
       ],
       "text/plain": [
-       "    cid             name     type  notnull dflt_value  pk\n",
-       "0     0            index  INTEGER        0       None   0\n",
-       "1     1          Tag No.     TEXT        0       None   0\n",
-       "2     2           Tagger     TEXT        0       None   0\n",
-       "3     3         Mon. Sex     TEXT        0       None   0\n",
-       "4     4     Where Tagged     TEXT        0       None   0\n",
-       "5     5      Date Tagged     TEXT        0       None   0\n",
-       "6     6   Date Recovered     TEXT        0       None   0\n",
-       "7     7  Where Recovered     TEXT        0       None   0\n",
-       "8     8         Observer     TEXT        0       None   0\n",
-       "9     9         Interval     TEXT        0       None   0\n",
-       "10   10            Miles     REAL        0       None   0"
+       "    cid            name     type  notnull dflt_value  pk\n",
+       "0     0           index  INTEGER        0       None   0\n",
+       "1     1         Tag No.     TEXT        0       None   0\n",
+       "2     2          Tagger     TEXT        0       None   0\n",
+       "3     3         Mon Sex     TEXT        0       None   0\n",
+       "4     4        Location     TEXT        0       None   0\n",
+       "5     5     Date Tagged     TEXT        0       None   0\n",
+       "6     6  Date Recovered     TEXT        0       None   0\n",
+       "7     7      Location.1     TEXT        0       None   0\n",
+       "8     8        Observer     TEXT        0       None   0\n",
+       "9     9        Interval     TEXT        0       None   0\n",
+       "10   10        Distance     TEXT        0       None   0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -323,141 +323,141 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Tag No.</th>\n",
-       "      <th>Where Tagged</th>\n",
+       "      <th>Location</th>\n",
        "      <th>Date Tagged</th>\n",
        "      <th>Date Recovered</th>\n",
-       "      <th>Where Recovered</th>\n",
-       "      <th>Miles</th>\n",
+       "      <th>Location.1</th>\n",
+       "      <th>Distance</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>AU 646</td>\n",
-       "      <td>Keene,  NY</td>\n",
-       "      <td>19 Sep</td>\n",
-       "      <td>Feb 96</td>\n",
-       "      <td>El Rosario colony, \\nMexico</td>\n",
-       "      <td>2580.0</td>\n",
+       "      <td>145LA</td>\n",
+       "      <td>Tully, NY</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>29-Sep</td>\n",
+       "      <td>LaFayette, NY</td>\n",
+       "      <td>8 m</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>BW 003</td>\n",
-       "      <td>Huntingtown, \\nMD</td>\n",
-       "      <td>14 Sep</td>\n",
-       "      <td>Dec\\n1995</td>\n",
-       "      <td>El Rosario\\ncolony,  Mexico</td>\n",
-       "      <td>2285.0</td>\n",
+       "      <td>134LK</td>\n",
+       "      <td>Plattsburgh\\nAir Force\\nBase</td>\n",
+       "      <td>19-Sep</td>\n",
+       "      <td>25-Sep</td>\n",
+       "      <td>Plattsburgh Air\\nForce Base</td>\n",
+       "      <td>0 m</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>AN 008</td>\n",
-       "      <td>West St Paul,  MN</td>\n",
-       "      <td>4 Sep</td>\n",
-       "      <td>1 Mar</td>\n",
-       "      <td>El Rosario\\ncolony,  Mexico</td>\n",
-       "      <td>1990.0</td>\n",
+       "      <td>945KX</td>\n",
+       "      <td>Kent Park, IA</td>\n",
+       "      <td>10-Sep</td>\n",
+       "      <td>29-Sep</td>\n",
+       "      <td>Mexico, MO</td>\n",
+       "      <td>170 m</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>AG 802</td>\n",
-       "      <td>Sheldon,  IA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Mar\\n1996</td>\n",
-       "      <td>Chinqua,  Mexico</td>\n",
-       "      <td>1820.0</td>\n",
+       "      <td>283LJ</td>\n",
+       "      <td>Carroll, IA</td>\n",
+       "      <td>19-Sep</td>\n",
+       "      <td>20-Sep</td>\n",
+       "      <td>Carroll, IA</td>\n",
+       "      <td>0 m</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>CU 878</td>\n",
-       "      <td>Wamego,  KS</td>\n",
-       "      <td>23 Sep</td>\n",
-       "      <td>Mar 96</td>\n",
-       "      <td>Chinqua,  Mexico</td>\n",
-       "      <td>1555.0</td>\n",
+       "      <td>237AQ</td>\n",
+       "      <td>Hays, KS</td>\n",
+       "      <td>21-Sep</td>\n",
+       "      <td>21-Sep</td>\n",
+       "      <td>Hays, KS</td>\n",
+       "      <td>0 m</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>BP 359</td>\n",
-       "      <td>Hays,  KS</td>\n",
-       "      <td>18 Sep</td>\n",
-       "      <td>24 Feb</td>\n",
-       "      <td>Sierra Chinqua,  Mexico</td>\n",
-       "      <td>1510.0</td>\n",
+       "      <td>668KY</td>\n",
+       "      <td>DesMoines\\n, IA</td>\n",
+       "      <td>18-Sep</td>\n",
+       "      <td>25-Sep</td>\n",
+       "      <td>North High\\nSchool\\nDes Moines, IA</td>\n",
+       "      <td>0 m</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>BP 652</td>\n",
-       "      <td>Hays,  KS</td>\n",
-       "      <td>18 Sep</td>\n",
-       "      <td>Mar\\n1996</td>\n",
-       "      <td>Chinqua, \\nMexico</td>\n",
-       "      <td>1510.0</td>\n",
+       "      <td>873LT</td>\n",
+       "      <td>Shawnee,\\nKS</td>\n",
+       "      <td>15-Sep</td>\n",
+       "      <td>18-Sep</td>\n",
+       "      <td>5mile east of\\nDrexel, MO</td>\n",
+       "      <td>40 m</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>BO 299</td>\n",
-       "      <td>Hutchinson,  KS</td>\n",
-       "      <td>1 Oct</td>\n",
-       "      <td>15 Jan</td>\n",
-       "      <td>Herrada or Las Palomas, \\nMexico</td>\n",
-       "      <td>1500.0</td>\n",
+       "      <td>824KF</td>\n",
+       "      <td>15m N.\\nDecorah,\\nIA</td>\n",
+       "      <td>6-Sep</td>\n",
+       "      <td>11-Sep</td>\n",
+       "      <td>Dyersville, IA</td>\n",
+       "      <td>100 m</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>CM 355</td>\n",
-       "      <td>Berryville,  AR</td>\n",
-       "      <td>25 Sep</td>\n",
-       "      <td>30 Dec</td>\n",
-       "      <td>El Rosario colony,  Mexico</td>\n",
-       "      <td>1445.0</td>\n",
+       "      <td>666KO</td>\n",
+       "      <td>Wichita,\\nKS</td>\n",
+       "      <td>5-Sep</td>\n",
+       "      <td>6-Sep</td>\n",
+       "      <td>Wichita, KS</td>\n",
+       "      <td>0 m</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>CJ 954</td>\n",
-       "      <td>Andover,  KS</td>\n",
-       "      <td>24 Sep</td>\n",
-       "      <td>Mar\\n1996</td>\n",
-       "      <td>Chinqua,  Mexico</td>\n",
-       "      <td>1445.0</td>\n",
+       "      <td>185KX</td>\n",
+       "      <td>Kansas\\nCity, MO</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>27-Sep</td>\n",
+       "      <td>Kansas City,\\nMO</td>\n",
+       "      <td>0 m</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Tag No.       Where Tagged Date Tagged Date Recovered  \\\n",
-       "0  AU 646         Keene,  NY      19 Sep         Feb 96   \n",
-       "1  BW 003  Huntingtown, \\nMD      14 Sep      Dec\\n1995   \n",
-       "2  AN 008  West St Paul,  MN       4 Sep          1 Mar   \n",
-       "3  AG 802       Sheldon,  IA         NaN      Mar\\n1996   \n",
-       "4  CU 878        Wamego,  KS      23 Sep         Mar 96   \n",
-       "5  BP 359          Hays,  KS      18 Sep         24 Feb   \n",
-       "6  BP 652          Hays,  KS      18 Sep      Mar\\n1996   \n",
-       "7  BO 299    Hutchinson,  KS       1 Oct         15 Jan   \n",
-       "8  CM 355    Berryville,  AR      25 Sep         30 Dec   \n",
-       "9  CJ 954       Andover,  KS      24 Sep      Mar\\n1996   \n",
+       "  Tag No.                      Location Date Tagged Date Recovered  \\\n",
+       "0   145LA                     Tully, NY         NaN         29-Sep   \n",
+       "1   134LK  Plattsburgh\\nAir Force\\nBase      19-Sep         25-Sep   \n",
+       "2   945KX                 Kent Park, IA      10-Sep         29-Sep   \n",
+       "3   283LJ                   Carroll, IA      19-Sep         20-Sep   \n",
+       "4   237AQ                      Hays, KS      21-Sep         21-Sep   \n",
+       "5   668KY               DesMoines\\n, IA      18-Sep         25-Sep   \n",
+       "6   873LT                  Shawnee,\\nKS      15-Sep         18-Sep   \n",
+       "7   824KF          15m N.\\nDecorah,\\nIA       6-Sep         11-Sep   \n",
+       "8   666KO                  Wichita,\\nKS       5-Sep          6-Sep   \n",
+       "9   185KX              Kansas\\nCity, MO         NaN         27-Sep   \n",
        "\n",
-       "                    Where Recovered   Miles  \n",
-       "0       El Rosario colony, \\nMexico  2580.0  \n",
-       "1       El Rosario\\ncolony,  Mexico  2285.0  \n",
-       "2       El Rosario\\ncolony,  Mexico  1990.0  \n",
-       "3                  Chinqua,  Mexico  1820.0  \n",
-       "4                  Chinqua,  Mexico  1555.0  \n",
-       "5           Sierra Chinqua,  Mexico  1510.0  \n",
-       "6                 Chinqua, \\nMexico  1510.0  \n",
-       "7  Herrada or Las Palomas, \\nMexico  1500.0  \n",
-       "8        El Rosario colony,  Mexico  1445.0  \n",
-       "9                  Chinqua,  Mexico  1445.0  "
+       "                           Location.1 Distance  \n",
+       "0                       LaFayette, NY      8 m  \n",
+       "1         Plattsburgh Air\\nForce Base      0 m  \n",
+       "2                          Mexico, MO    170 m  \n",
+       "3                         Carroll, IA      0 m  \n",
+       "4                            Hays, KS      0 m  \n",
+       "5  North High\\nSchool\\nDes Moines, IA      0 m  \n",
+       "6           5mile east of\\nDrexel, MO     40 m  \n",
+       "7                      Dyersville, IA    100 m  \n",
+       "8                         Wichita, KS      0 m  \n",
+       "9                    Kansas City,\\nMO      0 m  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.drop([\"Tagger\", \"Mon. Sex\", \"Observer\", \"Interval\"], axis = 1, inplace = True)\n",
+    "df.drop([\"Tagger\", \"Mon Sex\", \"Observer\", \"Interval\"], axis = 1, inplace = True)\n",
     "df.head(10)"
    ]
   },
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -501,82 +501,84 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Keene</td>\n",
+       "      <td>Tully</td>\n",
        "      <td>NY</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Huntingtown</td>\n",
-       "      <td>MD</td>\n",
+       "      <td>Plattsburgh Air Force Base</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>West St Paul</td>\n",
-       "      <td>MN</td>\n",
+       "      <td>Kent Park</td>\n",
+       "      <td>IA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Sheldon</td>\n",
+       "      <td>Carroll</td>\n",
        "      <td>IA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Wamego</td>\n",
+       "      <td>Hays</td>\n",
        "      <td>KS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Hays</td>\n",
-       "      <td>KS</td>\n",
+       "      <td>DesMoines</td>\n",
+       "      <td>IA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Hays</td>\n",
+       "      <td>Shawnee</td>\n",
        "      <td>KS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Hutchinson</td>\n",
-       "      <td>KS</td>\n",
+       "      <td>15m N. Decorah</td>\n",
+       "      <td>IA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Berryville</td>\n",
-       "      <td>AR</td>\n",
+       "      <td>Wichita</td>\n",
+       "      <td>KS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Andover</td>\n",
-       "      <td>KS</td>\n",
+       "      <td>Kansas City</td>\n",
+       "      <td>MO</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       tag_city Tag State\n",
-       "0         Keene        NY\n",
-       "1   Huntingtown        MD\n",
-       "2  West St Paul        MN\n",
-       "3       Sheldon        IA\n",
-       "4        Wamego        KS\n",
-       "5          Hays        KS\n",
-       "6          Hays        KS\n",
-       "7    Hutchinson        KS\n",
-       "8    Berryville        AR\n",
-       "9       Andover        KS"
+       "                     tag_city Tag State\n",
+       "0                       Tully        NY\n",
+       "1  Plattsburgh Air Force Base      None\n",
+       "2                   Kent Park        IA\n",
+       "3                     Carroll        IA\n",
+       "4                        Hays        KS\n",
+       "5                  DesMoines         IA\n",
+       "6                     Shawnee        KS\n",
+       "7              15m N. Decorah        IA\n",
+       "8                     Wichita        KS\n",
+       "9                 Kansas City        MO"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.loc[df['Where Tagged'].str.contains(\"\\n\", na=False), \"Where Tagged\"] = df.loc[df['Where Tagged'].str.contains(\"\\n\", na=False), \"Where Tagged\"].str.replace(\"\\n\", \" \")\n",
-    "df2 = df['Where Tagged'].str.split(', ', expand=True, n=1)\n",
+    "df.loc[df['Location'].str.contains(\"\\n\", na=False), \"Location\"] = df.loc[df['Location'].str.contains(\"\\n\", na=False), \"Location\"].str.replace(\"\\n\", \" \")\n",
+    "df2 = df['Location'].str.split(', ', expand=True, n=1)\n",
     "df2.columns = ['tag_city', 'Tag State']\n",
-    "df2['Tag State'] = df2['Tag State'].str.strip()\n",
+    "df2.loc[df2['Tag State'] == 'Quebec, Canada', 'Tag State'] = 'Quebec'\n",
+    "df2.loc[df2['Tag State'] == 'Coahuila, Mexico', 'Tag State'] = 'Coahuila'\n",
+    "df2['Tag State'] = df2['Tag State'].str.strip(\".\")\n",
     "df2.head(10)"
    ]
   },
